ecserver/ecserver.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    apps: ecserver
  name: ecserver
spec: 
  type: NodePort
  selector: 
    app: ecserver
  ports:
  - name: ecserver
    port: 80
    targetPort: 8081
    nodePort: 30081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecserver
  template:
    metadata:
      labels:
        app: ecserver
    spec:
      containers:
      - name: ecserver
        image: local-registry:5002/ecserver:latest
        ports:
        - containerPort: 8081
